# obs-comp-delay

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  buildspec.json
.github/workflows/: push.yaml
cmake/common/: bootstrap.cmake  buildspec_common.cmake  helpers_common.cmake  osconfig.cmake
data/locale/: en-US.ini
installer/windows/: obs-comp-delay.iss
src/: plugin-main.cpp
src/codec/: ffmpeg-video-codec.cpp  ffmpeg-video-codec.hpp
src/core/: delay-settings.cpp  delay-settings.hpp  delay-state-machine.cpp  delay-state-machine.hpp  encoded-ring-buffer.cpp  encoded-ring-buffer.hpp
src/obs/: delay-controller.cpp  delay-controller.hpp  delay-settings-dialog.cpp  delay-settings-dialog.hpp  playback-source.cpp  playback-source.hpp  raw-audio-frame.hpp  raw-video-frame.hpp  scene-capture-encoder.cpp  scene-capture-encoder.hpp  scene-utils.cpp  scene-utils.hpp
tests/: codec-tests.cpp  core-tests.cpp  obs-portable-integration-smoke.ps1
